[package]
name = "update-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
hickory-client = { version = "0.25.2", features = ["serde"] }
hickory-proto = { version = "0.25.2", features = ["dnssec-ring", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["base64"] }
serde_yaml = "0.9.34"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
